--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
 			<td><%= user.email %></td>
 			<td><%= user.name %></td>
 			<td><%= user.phone %></td>
-			<td><%= link_to 'Edit', edit_user_path user %></td>
+			<td><%= link_to 'Edit', edit_user_path(user) %></td>
 			<td><%= link_to 'Delete', user, method: :delete %></td>
 		</tr>
 	<% end %>
